TECH: remove guava