@@ -4,7 +4,6 @@ import com.adelean.inject.resources.junit.vintage.json.JsonResource;
 import com.adelean.resources.data.Person;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.ClassRule;
 import org.junit.Rule;
@@ -99,11 +98,11 @@ public class JsonResourceRuleJacksonTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Mairie du 12ème",
                                 "nom_arrondissement_communes", "Paris",
                                 "capacity", 30),
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Charles Frérot - Albert Guilpin",
                                 "nom_arrondissement_communes", "Gentilly",
                                 "capacity", 23));
@@ -116,11 +115,11 @@ public class JsonResourceRuleJacksonTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Mairie du 12ème",
                                 "nom_arrondissement_communes", "Paris",
                                 "capacity", 30),
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Charles Frérot - Albert Guilpin",
                                 "nom_arrondissement_communes", "Gentilly",
                                 "capacity", 23));
