@@ -8,7 +8,6 @@ import assertj.json.gson.JsonAssertions;
 import com.adelean.inject.resources.spring.beans.BeanWithJsonResources;
 import com.adelean.inject.resources.spring.beans.TestConfig;
 import com.adelean.resources.data.Person;
-import com.google.common.collect.ImmutableMap;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -17,6 +16,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+
+import java.util.Map;
 
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = TestConfig.class)
@@ -122,11 +123,11 @@ public class JsonResourceAnnotationTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Mairie du 12ème",
                                 "nom_arrondissement_communes", "Paris",
                                 "capacity", 30.0),
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Charles Frérot - Albert Guilpin",
                                 "nom_arrondissement_communes", "Gentilly",
                                 "capacity", 23.0));
@@ -140,11 +141,11 @@ public class JsonResourceAnnotationTests {
                 .isNotEmpty()
                 .hasSize(2)
                 .containsExactly(
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Mairie du 12ème",
                                 "nom_arrondissement_communes", "Paris",
                                 "capacity", 30.0),
-                        ImmutableMap.of(
+                        Map.of(
                                 "name", "Charles Frérot - Albert Guilpin",
                                 "nom_arrondissement_communes", "Gentilly",
                                 "capacity", 23.0));
